--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -15,6 +15,7 @@ body {
   height: 100vh;
   background-size: cover;
   color: #000000;
+  transition: background-image 1.3s ease-in-out;
 }
 
 .time {
@@ -26,16 +27,51 @@ body {
 }
 
 h1 {
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 
 h2 {
-  margin-bottom: 0.5rem;
   opacity: 0.8;
+}
+
+.bg-reload{
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  background-image: url(../images/reload.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 40px 40px;
+  border: none;
+  opacity: 0.3;
+  border-radius: 50%;
+  cursor: pointer;
+  outline: none;
+}
+
+.bg-reload:hover{
+  opacity: 1;
+}
+
+.bg-reload:active{
+  opacity: 0.8;
+  box-shadow: 0 0 0 2px white inset, 0 0 0 4px black inset
 }
 
 @media (max-width: 700px) {
   .time {
     font-size: 6rem;
   }
+}
+
+.wrap{
+  padding: 20px; 
+  display: flex;
+  flex-direction: column;  
+  background-color: rgba(255, 255, 255, 0.3);
+  display: block;
+  border-radius: 40%;
+  box-shadow: 0 0 15px 10px rgba(255, 255, 255, 0.3);
 }
