--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Amatic SC', cursive;
-  font-size:24px;
+  font-size: 24px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,7 +15,7 @@ body {
   height: 100vh;
   background-size: cover;
   color: #000000;
-  transition: background-image 1.3s ease-in-out;
+  transition: background-image 1s ease-in-out;
 }
 
 .time {
@@ -34,7 +34,7 @@ h2 {
   opacity: 0.8;
 }
 
-.bg-reload{
+.bg-reload {
   width: 50px;
   height: 50px;
   position: absolute;
@@ -51,11 +51,28 @@ h2 {
   outline: none;
 }
 
-.bg-reload:hover{
+.btn-quote {
+  width: 50px;
+  height: 50px;
+  background-image: url(../images/papyrus.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 40px 40px;
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  outline: none;
+  opacity: 1;
+}
+.btn-quote:hover{
+  opacity: 0.5;
+}
+.bg-reload:hover {
   opacity: 1;
 }
 
-.bg-reload:active{
+.bg-reload:active {
   opacity: 0.8;
   box-shadow: 0 0 0 2px white inset, 0 0 0 4px black inset
 }
@@ -66,10 +83,24 @@ h2 {
   }
 }
 
-.wrap{
-  padding: 20px; 
+.wrap {
+  padding: 20px;
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.3);
+  display: block;
+  border-radius: 40%;
+  box-shadow: 0 0 15px 10px rgba(255, 255, 255, 0.3);
+}
+
+.quote-wrap {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  width: 300px;
+  padding: 20px;
+  padding-top: 10px;
+  padding-bottom: 30px;
   background-color: rgba(255, 255, 255, 0.3);
   display: block;
   border-radius: 40%;
