--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Amatic SC', cursive;
-  font-size: 24px;
+  font-size: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,12 +15,13 @@ body {
   text-align: center;
   height: 100vh;
   background-size: cover;
+  background-position: center;
   color: #000000;
   transition: background-image 1s ease-in-out;
 }
 
 .time {
-  font-size: 8rem;
+  font-size: 7rem;
 }
 
 .day {
@@ -95,11 +96,9 @@ h2 {
 }
 
 .quote-wrap {
-  width: 300px;
+
   padding: 20px;
   align-items: center;
-  padding-top: 10px;
-  padding-bottom: 30px;
   background-color: rgba(255, 255, 255, 0.3);
   display: block;
   border-radius: 40%;
@@ -107,11 +106,14 @@ h2 {
 
 }
 
+.quote {
+  width: 300px;
+}
+
 
 .weather-wrap {
   display: block;
-  width: 300px;
-  height: 200px;
+  padding: 20px;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.3);
   display: block;
@@ -137,4 +139,6 @@ h2 {
   .quote-wrap {
     margin: 0 auto;
   }
+
+
 }
