--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -15,6 +15,7 @@ body {
   padding-bottom: 0;
   text-align: center;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -101,12 +102,14 @@ body {
   color: red;
   font-size: 1.3rem;
   font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 .name_input::-moz-placeholder {
   color: red;
   font-size: 1.3rem;
   font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 /* Firefox 19+ */
@@ -114,6 +117,7 @@ body {
   color: red;
   font-size: 1.3rem;
   font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 /* Firefox 18- */
@@ -121,18 +125,21 @@ body {
   color: red;
   font-size: 1.3rem;
   font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 .focus_input::-webkit-input-placeholder {
   color: red;
   font-size: 1.5rem;
   font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 .focus_input::-moz-placeholder {
   color: red;
   font-size: 1.5rem;
   font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 /* Firefox 19+ */
@@ -140,6 +147,7 @@ body {
   color: red;
   font-size: 1.5rem;
   font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 /* Firefox 18- */
@@ -147,18 +155,21 @@ body {
   color: red;
   font-size: 1.5rem;
   font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 .city_input::-webkit-input-placeholder {
   color: red;
   font-size: 0.8rem;
   font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 .city_input::-moz-placeholder {
   color: red;
   font-size: 0.8rem;
   font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 /* Firefox 19+ */
@@ -166,6 +177,7 @@ body {
   color: red;
   font-size: 0.8rem;
   font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 /* Firefox 18- */
@@ -173,6 +185,7 @@ body {
   color: red;
   font-size: 0.8rem;
   font-family: 'Anonymous Pro', monospace;
+  text-align: center;
 }
 
 .bg-reload {
