--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -46,7 +46,8 @@ body {
 }
 
 .focus_intro {
-  margin-bottom: 2rem;
+  display: block;
+  margin-bottom: 10px;
 }
 
 .name_text,
@@ -59,6 +60,7 @@ body {
   margin: 0 auto;
   margin-bottom: 0.5rem;
   display: flex;
+  flex-wrap: wrap;
   align-items: baseline;
   justify-content: center;
 }
@@ -278,7 +280,7 @@ body {
 }
 
 .wrap {
-  max-width: 100vh;
+  max-width: 100vw;
   padding: 5vh;
   display: flex;
   color: #ffffff;
@@ -330,7 +332,7 @@ body {
 
   .time,
   .day {
-    font-size: 3rem;
+    font-size: 2.5rem;
     justify-content: center;
   }
 
@@ -346,12 +348,13 @@ body {
 
   .greeting,
   .focus_intro {
-    font-size: 1.1rem;
+    font-size: 0.9rem;
     margin-right: .5rem;
   }
 
   .wrap-additions {
     min-height: 150px;
+    width: 85%;
   }
 
   .quote-wrap {
