--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -54,6 +54,27 @@ body {
 .focus_text {
   font-size: 2.2rem;
   max-width: 40vh;
+  cursor: pointer;
+}
+
+.city_text{
+  cursor: pointer;
+}
+
+.name_text:hover,
+.focus_text:hover{
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+.city_text:hover{
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
 }
 
 .name_label {
@@ -80,6 +101,7 @@ body {
   color: white;
   font-family: 'Anonymous Pro', monospace;
   text-shadow: 1px 1px 4px rgb(31, 23, 17), 1px 1px 7px #5f462d;
+  cursor: pointer;
 }
 
 .city_input {
